keyence.com (archived on 2019-04-17)
{
  "alexa_rank": 43630,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 3045,
  "classifier_probability": 0.83,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.02,
  "homepage_snapshot_redirected_domain": "keyence.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190329145538id_/https://www.keyence.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190329145538id_/http%3A//keyence.com",
  "interval": "2019_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "keyence.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190417160305id_/https%3A//www.keyence.com/privacy/index.jsp",
  "policy_title": "Privacy | KEYENCE America",
  "policy_url": "keyence.com/privacy/index.jsp",
  "sha1": "c1f2e2cc35f0255f88896813b88e69f5862a3746",
  "simhash": 6419247340830304484,
  "simhash_updated": true,
  "site_hostname": "keyence.com",
  "site_url": "http://keyence.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20190417160305",
  "word_count": 514,
  "year": 2019
}

--- a/k/ke/key/keyence.com.html
+++ b/k/ke/key/keyence.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the keyence.com privacy policy that was archived on 2018-11-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181109230306id_/https%3A//www.keyence.com/privacy/index.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the keyence.com privacy policy that was archived on 2019-04-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190417160305id_/https%3A//www.keyence.com/privacy/index.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en" class="js webkit"><head>
 <meta http-equiv="content-language" content="en">
@@ -11,26 +11,30 @@
 <meta http-equiv="content-script-type" content="text/javascript">
 <link rel="shortcut icon" href="/favicon.ico">
 
-<link rel="stylesheet" href="/css/common/base.css?var=20181017150908" type="text/css">
-<link rel="stylesheet" href="/css/common/layout.css?var=20181108180121" type="text/css">
-<link rel="stylesheet" href="/css/common/headerarea.css?var=20181108180121" type="text/css">
-<link rel="stylesheet" href="/css/common/footerarea.css?var=20181108180121" type="text/css">
-<link rel="stylesheet" href="/css/common/contentsarea.css?var=20181108180121" type="text/css">
-<link rel="stylesheet" href="/css/common/megamenu.css?var=20181017150908" type="text/css">
-<link rel="stylesheet" href="/css/common/function.css?var=20181017150908" type="text/css">
-<link rel="stylesheet" href="/css/common/html_enews.css?var=20181017150908" type="text/css">
-<link rel="stylesheet" href="/css/common/local_lv5.css?var=20181017150908" type="text/css">
-<link rel="stylesheet" href="/css/common/local_lv6.css?var=20181017150908" type="text/css">
-<link rel="stylesheet" href="/css/common/local_lv7.css?var=20181017150908" type="text/css">
-<script type="text/javascript" async="" src="https://bs.nakanohito.jp/b3/bi.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-K5VRNS"></script><script src="/js/common/usersettings.js?var=20181017150909" type="text/javascript" style="color: rgb(0, 0, 0);"></script>
+
+
+<link rel="stylesheet" href="/css/common/base.css?var=20190416155904" type="text/css">
+<link rel="stylesheet" href="/css/common/layout.css?var=20190322171717" type="text/css">
+<link rel="stylesheet" href="/css/common/headerarea.css?var=20190322171717" type="text/css">
+<link rel="stylesheet" href="/css/common/footerarea.css?var=20190322171717" type="text/css">
+<link rel="stylesheet" href="/css/common/contentsarea.css?var=20190322171717" type="text/css">
+<link rel="stylesheet" href="/css/common/megamenu.css?var=20190416155904" type="text/css">
+<link rel="stylesheet" href="/css/common/function.css?var=20190416155904" type="text/css">
+<link rel="stylesheet" href="/css/common/html_enews.css?var=20190416155904" type="text/css">
+<link rel="stylesheet" href="/css/common/local_lv5.css?var=20190416155904" type="text/css">
+<link rel="stylesheet" href="/css/common/local_lv6.css?var=20190416155904" type="text/css">
+<link rel="stylesheet" href="/css/common/local_lv7.css?var=20190416155904" type="text/css">
+<script type="text/javascript" async="" src="https://bs.nakanohito.jp/b3/bi.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-K5VRNS"></script><script src="/js/common/usersettings.js?var=20190416155909" type="text/javascript" style="color: rgb(0, 0, 0);"></script>
 <script src="/js/common/jquery-1.8.1.min.js?var=20141107130736" type="text/javascript"></script>
-<script src="/js/common/scripts.js?var=20150616142948" type="text/javascript"></script>
+<script src="/js/common/scripts.js?var=20190206193525" type="text/javascript"></script>
 <script src="/js/common/downloadscript.js?var=20141107130736" type="text/javascript"></script>
-<script src="/js/common/cartscript.js?var=20141107130736" type="text/javascript"></script>
-<script src="/js/common/basic.js?var=20180227202548" type="text/javascript"></script>
+<script src="/js/common/cartscript.js?var=20181218202904" type="text/javascript"></script>
+<script src="/js/common/basic.js?var=20190206193525" type="text/javascript"></script>
 <script src="/js/common/rollarea.js?var=20141107130736" type="text/javascript"></script>
 <script src="/js/common/suz-accessLog.js?var=20161208213541" type="text/javascript"></script>
 <script src="/js/common/suz-recommend.js?var=20161129182908" type="text/javascript"></script>
+<link rel="stylesheet" href="/css/search/master.css?var=20190416155904" type="text/css">
+<script src="/js/search/master.js?var=20190416150343" type="text/javascript"></script>
 </head>
 
 
@@ -55,7 +59,7 @@ document.write('<s' + 'cript src=\"' + _vis_opt_protocol +
 'dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&a='+_vis_opt_account_id+'&url='
 +encodeURIComponent(document.URL)+'&random='+Math.random()+'\" type=\"text/javascript\">' + '<\/s' + 'cript>');
 }
-</script><script src="https://dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&amp;a=161387&amp;url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20181109230306id_%2Fhttps%253A%2F%2Fwww.keyence.com%2Fprivacy%2Findex.jsp&amp;random=0.29108910209800354" type="text/javascript"></script>
+</script><script src="https://dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&amp;a=161387&amp;url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20190417160305id_%2Fhttps%253A%2F%2Fwww.keyence.com%2Fprivacy%2Findex.jsp&amp;random=0.053213238324530954" type="text/javascript"></script>
 <script type="text/javascript">
 if(!document.getElementById('kpi_modalbox')){
 if(typeof(_vis_opt_settings_loaded) == "boolean") { document.write('<s' + 'cript src="' + _vis_opt_protocol +
@@ -174,11 +178,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 <ul id="HeaderLink1">
-<li class="Home"><a id="suz_headerHome" href="/index.jsp">Home</a></li>
+<li class="Home"><a id="suz_headerHome" href="https://www.keyence.com/index.jsp">Home</a></li>
 <li class="Person"><a href="/mykeyence/?ptn=002">My KEYENCE</a></li>
 
+<li><a href="/user/login/loginWithRegist/">Sign In</a></li>
+<li><a href="/user/registration/register/">Register</a></li>
 
-<li id="suz_headerUserName" style="display: none;"></li>
 
 <li class="Tel"><a href="tel:8885393623" class="AutoPhoneCall"> 1-888-539-3623</a></li>
 </ul>
@@ -192,28 +197,128 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <ul id="GlobalNav">
 <li class="Products"><a href="/products/index.jsp"><span>Products</span></a></li>
 <li class="Solutions"><a href="/solutions/index.jsp"><span>Solutions</span></a></li>
-<li class="Downloads"><a href="//www-search.keyence.com/us/enus/downloadcon/search.x"><span>Downloads</span></a></li>
+<li class="Downloads"><a href="/downloads/"><span>Downloads</span></a></li>
 <li class="Support"><a href="/support/index.jsp"><span>Support</span></a></li>
 <li class="AboutUs"><a href="/about-us/index.jsp"><span>About Us</span></a></li>
 <li class="ContactUs"><a href="/inquiry/contact/"><span>Contact Us</span></a></li>
 </ul>
-<form method="get" action="//www-search.keyence.com/us/enus/products/search.x" id="HeaderSearch">
+
+
+
+<!--
+isNewSearch : true
+-->
+
+
+
+
+
+<form method="get" action="/search/all/" id="HeaderSearch">
 <div id="HeaderSearchInner">
-<div class="SelectCol">
-<select name="unitid" class="CustomSelect">
-<option value="enus_all" selected="">All</option>
-<option value="enus_products">Products</option>
-</select>
-<!-- /div.SelectCol --></div>
-<div class="InputCol">
-<input type="text" name="q" value="" title="Input keywords" id="MF_form_phrase" autocomplete="off" class="SearchInput">
-<input type="image" src="/img/common/btn_header_search.png" alt="Search" class="SearchButton">
-<input type="hidden" name="ie" value="UTF-8">
-<input type="hidden" name="page" value="1">
+<div class="InputCol JSSearchSuggest JSHeaderSuggest">
+<input type="text" name="q" value="" placeholder="Input keywords" autocomplete="off" class="SearchInput JSSearchSuggestInput">
+<input type="image" src="/img/common/btn_header_search.png" alt="Search" class="SearchButton JSSearchButton">
+<div class="SearchSuggestBox SearchAllCategory JSSearchSuggestTarget IsHidden">
+<div class="SearchSuggestBoxInner">
+<div class="SearchHistory JSSearchHistory IsHidden">
+<dl class="CategoryList">
+<dt>Recent Searches</dt>
+<dd>
+<ul class="HistoryList JSSearchHistoryList"></ul>
+</dd>
+</dl>
+</div>
+<div class="SuggestColumn JSSuggestColumn IsHidden">
+<div class="Column">
+<div class="SeriesArea">
+<dl class="CategoryList">
+<dt>Series (<em class="JSSuggestSeriesResultNum"></em> results)</dt>
+<dd>
+<ul id="JSHeaderSuggestSeriesList" class="SeriesList"></ul>
+<ul class="SearchLinkList01 Right JSChangeSubmitDestination">
+<li><a href="/search/products">View more products</a></li>
+</ul>
+</dd>
+</dl>
+</div>
+<div class="ModelArea">
+<dl class="CategoryList">
+<dt>Models (<em class="JSSuggestModelResultNum"></em> results)</dt>
+<dd>
+<ul id="JSHeaderSuggestModelList" class="SearchLinkList01 Col2"></ul>
+</dd>
+</dl>
+</div>
+</div>
+<div class="Column">
+<div class="KeywordArea">
+<dl class="CategoryList">
+<dt>Keywords</dt>
+<dd>
+<ul id="JSHeaderSuggestKeywordsList" class="KeywordsList"></ul>
+</dd>
+</dl>
+</div>
+</div>
+</div>
+</div>
+</div>
 <!-- /div.InputCol --></div>
 <!-- /div#HeaderSearchInner --></div>
 </form>
-<script src="/js/common/suggest_ext.js" type="text/javascript" charset="UTF-8"></script>
+
+
+
+
+
+
+
+
+
+
+
+<!--
+isNewSearch : true
+-->
+
+
+
+<template id="JSSearchHistoryTemplate">
+<li><button class="History" type="button" title=""></button></li>
+</template>
+<template id="JSSuggestSeriesTemplate">
+<li>
+<div class="Item">
+<dl>
+<dt><a class="Series" href=""><span class="CommonName"></span><span class="Name"></span></a></dt>
+<dd class="Nav">
+<ul class="SearchLinkList01 Inline">
+<li><a class="Catalog" href="">Catalogs</a></li>
+<li><a class="Spec" href="">Specs</a></li>
+<li><a class="Model" href="">Models</a></li>
+</ul>
+</dd>
+</dl>
+</div>
+<div class="Thumbnail"><a class="ThumbnailLink" href=""><img src="" alt=""></a></div>
+</li>
+</template>
+<template id="JSSuggestModelTemplate">
+<li><a class="Model" href=""></a></li>
+</template>
+<template id="JSSuggestKeywordsTemplate">
+<li><a class="Keywords" href=""></a></li>
+</template>
+
+
+
+
+
+
+
+
+
+
 <!-- /div#HeaderBottomInner --></div>
 <!-- /div#HeaderBottom --></div>
 <!-- /div#HeaderArea --></div>
@@ -328,7 +433,7 @@ CONTACT US</dt>
 </ul>
 <!-- /div#FooterGroup1 --></div>
 <div id="FooterGroup2">
-<p id="Copyright">Copyright (C) 2018 KEYENCE CORPORATION. All Rights Reserved.</p>
+<p id="Copyright">Copyright (C) 2019 KEYENCE CORPORATION. All Rights Reserved.</p>
 <div id="SocialLinks">
 <ul>
 <li>
