frameweb.com (archived on 2019-04-17)
{
  "alexa_rank": 87121,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 14287,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.89,
  "homepage_snapshot_redirected_domain": "frameweb.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190324223633id_/https://www.frameweb.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190324223633id_/http%3A//frameweb.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "frameweb.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190417172047id_/https%3A//www.frameweb.com/privacy-policy",
  "policy_title": "Privacy policy - Frameweb",
  "policy_url": "frameweb.com/privacy-policy",
  "sha1": "7c334ae2bd45ae7c52fc3023c16acec0216fb6dc",
  "simhash": 14607650560386099408,
  "simhash_updated": false,
  "site_hostname": "frameweb.com",
  "site_url": "http://frameweb.com",
  "smog": 16.93,
  "strict_updated": false,
  "timestamp": "20190417172047",
  "word_count": 2272,
  "year": 2019
}

--- a/f/fr/fra/frameweb.com.html
+++ b/f/fr/fra/frameweb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the frameweb.com privacy policy that was archived on 2018-09-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180927054140id_/https%3A//www.frameweb.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the frameweb.com privacy policy that was archived on 2019-04-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190417172047id_/https%3A//www.frameweb.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><!--<![endif]--><head>
 		<meta charset="utf-8">
@@ -7,7 +7,7 @@
 			<title>Privacy policy - Frameweb</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-		<base href="https://www.frameweb.com/">
+		<!-- <base href="" /> -->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
@@ -35,7 +35,7 @@
 
 		<!--<link rel="stylesheet" type="text/css" href="/css/bootstrap.php">-->
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-					<link rel="stylesheet" type="text/css" href="/css/application-2.3.2.css">
+					<link rel="stylesheet" type="text/css" href="/css/application-2.3.7.css">
 		
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
@@ -151,7 +151,7 @@
           <!-- Standard leaderboard -->
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-12 leaderboard-wrapper text-center">
+          <div class="col-12 col-sm-12 leaderboard-wrapper text-center">
                       </div>
         </div>
 
@@ -162,8 +162,8 @@
   <div class="navbar-row top-row">
     <div class="container">
       <div class="row no-gutters">
-        <div class="col-xs-12 col-sm-12 text-center">
-          <div class="dropdown-container btn-group visible-md-down hidden-lg-up" id="navbar-dropdown">
+        <div class="col-12 col-sm-12 text-center">
+          <div class="dropdown-container btn-group hidden-lg hidden-xl" id="navbar-dropdown">
             <a class="dropdown-toggle" id="navbar-dropdown-toggle" aria-haspopup="true" aria-expanded="false">
               <span class="hamburger hamburger--squeeze" aria-label="Menu">
                 <span class="hamburger-box">
@@ -179,16 +179,108 @@
       <span>Interiors</span>
     </a>
 
+          <div class="submenu-toggle flex-and-center">        <i class="fa fa-caret-down submenu-caret"></i>
+      </div>
+      <div class="submenu-wrapper">
+        <ul class="submenu">
+                      <li>
+              <a href="/retail" class="margin-lg-left ">
+                <span>Retail</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/hospitality" class="margin-lg-left ">
+                <span>Hospitality</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/workspace" class="margin-lg-left ">
+                <span>Workspaces</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/show" class="margin-lg-left ">
+                <span>Shows</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/institution" class="margin-lg-left ">
+                <span>Institutions</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/residential" class="margin-lg-left ">
+                <span>Residential</span>
+              </a>
+            </li>
+                  </ul>
+      </div>
      </li>
       <li class="navlink ">
-    <a href="/design" class="margin-lg-left ">
-      <span>Design</span>
+    <a href="/cities" class="margin-lg-left ">
+      <span>Cities</span>
     </a>
 
+          <div class="submenu-toggle flex-and-center">        <i class="fa fa-caret-down submenu-caret"></i>
+      </div>
+      <div class="submenu-wrapper">
+        <ul class="submenu">
+                      <li>
+              <a href="/amsterdam" class="margin-lg-left ">
+                <span>Amsterdam</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/london" class="margin-lg-left ">
+                <span>London</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/paris" class="margin-lg-left ">
+                <span>Paris</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/madrid" class="margin-lg-left ">
+                <span>Madrid</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/nyc" class="margin-lg-left ">
+                <span>New York City</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/barcelona" class="margin-lg-left ">
+                <span>Barcelona</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/milan" class="margin-lg-left ">
+                <span>Milan</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/beijing" class="margin-lg-left ">
+                <span>Beijing</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/shanghai" class="margin-lg-left ">
+                <span>Shanghai</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/tokyo" class="margin-lg-left ">
+                <span>Tokyo</span>
+              </a>
+            </li>
+                  </ul>
+      </div>
      </li>
       <li class="navlink ">
-    <a href="/architecture" class="margin-lg-left ">
-      <span>Architecture</span>
+    <a href="https://www.frameawards.com/frame-lab" class="margin-lg-left ">
+      <span>Frame Lab</span>
     </a>
 
      </li>
@@ -245,7 +337,7 @@
             <button class="search-toggle"><i class="fa fa-search" aria-hidden="true" aria-label="Search"></i></button>
           </div>
 
-          <ul class="social no-margin list-inline float-right hidden-sm-down">
+          <ul class="social no-margin list-inline float-right hidden-xs hidden-sm">
             <li class="navbar-icon list-inline-item"><a href="//www.facebook.com/framemag/" target="_blank">
             <i class="fa fa-facebook" aria-hidden="true" style="font-size: 21px"></i></a></li>
             <li class="navbar-icon list-inline-item"><a href="//www.instagram.com/framemagazine/" target="_blank">
@@ -256,13 +348,12 @@
             <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
           </ul>
 
-          <a href="https://store.frameweb.com/" class="button float-right margin-sm-right hidden-md-down full-height padding-md-horizontal navlink button button-pink" id="button-navbar">Store <i class="fa fa-angle-right margin-sm-left" aria-hidden="true"></i></a>
+          <a href="https://store.frameweb.com/" class="button float-right margin-sm-right hidden-xs hidden-sm hidden-md full-height padding-md-horizontal navlink button button-pink" id="button-navbar">Store <i class="fa fa-angle-right margin-sm-left" aria-hidden="true"></i></a>
 
           <div id="logo">
               <a href="/">
-                  <img id="logo-white" src="/img/logo-white.png" alt="Logo">
+                  <!-- <img id="logo-white" src="/img/logo-white.png" alt="Logo"> -->
                   <img id="logo-black" class="active" src="/img/logo-black.png" alt="Logo">
-                  <!--<img id="logo-red" src="/img/logo-red.png" alt="Logo">-->
               </a>
           </div>
         </div>
@@ -270,23 +361,115 @@
     </div>
   </div>
 
-  <div class="navbar-row bottom-row hidden-md-down">
+  <div class="navbar-row bottom-row hidden-xs hidden-sm hidden-md">
     <ul class="navlinks text-center">
-            <li class=" ">
+            <li class="  submenu-toggle">
     <a href="/interiors" class=" ">
       <span>Interiors</span>
     </a>
 
+                  <i class="fa fa-caret-down submenu-caret"></i>
+      
+      <div class="submenu-wrapper">
+        <ul class="submenu">
+                      <li>
+              <a href="/retail" class=" ">
+                <span>Retail</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/hospitality" class=" ">
+                <span>Hospitality</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/workspace" class=" ">
+                <span>Workspaces</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/show" class=" ">
+                <span>Shows</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/institution" class=" ">
+                <span>Institutions</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/residential" class=" ">
+                <span>Residential</span>
+              </a>
+            </li>
+                  </ul>
+      </div>
      </li>
-      <li class=" ">
-    <a href="/design" class=" ">
-      <span>Design</span>
+      <li class="  submenu-toggle">
+    <a href="/cities" class=" ">
+      <span>Cities</span>
     </a>
 
+                  <i class="fa fa-caret-down submenu-caret"></i>
+      
+      <div class="submenu-wrapper">
+        <ul class="submenu">
+                      <li>
+              <a href="/amsterdam" class=" ">
+                <span>Amsterdam</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/london" class=" ">
+                <span>London</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/paris" class=" ">
+                <span>Paris</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/madrid" class=" ">
+                <span>Madrid</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/nyc" class=" ">
+                <span>New York City</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/barcelona" class=" ">
+                <span>Barcelona</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/milan" class=" ">
+                <span>Milan</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/beijing" class=" ">
+                <span>Beijing</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/shanghai" class=" ">
+                <span>Shanghai</span>
+              </a>
+            </li>
+                      <li>
+              <a href="/tokyo" class=" ">
+                <span>Tokyo</span>
+              </a>
+            </li>
+                  </ul>
+      </div>
      </li>
       <li class=" ">
-    <a href="/architecture" class=" ">
-      <span>Architecture</span>
+    <a href="https://www.frameawards.com/frame-lab" class=" ">
+      <span>Frame Lab</span>
     </a>
 
      </li>
@@ -320,7 +503,7 @@
   <div class="wrapper-search">
     <div class="container full-height">
       <div class="row full-height">
-        <div class="col-xs-12 col-sm-12 full-height">
+        <div class="col-12 col-sm-12 full-height">
           <form id="search" class="search-bar full-height" method="get" action="https://www.frameweb.com/search-results">
             <input class="search-input" type="search" name="search" value="" placeholder="Search...">
             <button class="search-submit padding-md-horizontal" type="submit"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
@@ -419,7 +602,7 @@
 
             <div class="col-4 col-md-9">
                 <ul class="services float-right">
-                    <li class="float-right"><a href="/service/search-back-issues">Search<span class="hidden-sm-down"> back issues</span></a></li>
+                    <li class="float-right"><a href="/service/search-back-issues">Search<span class="hidden-xs hidden-sm"> back issues</span></a></li>
                     <li class="float-right"><a href="/service/faq">FAQ</a></li>
                     <li class="float-right"><a href="/service/advertise">Advertise</a></li>
                     <li class="float-right"><a href="/service/contact">Contact</a></li>
@@ -427,14 +610,14 @@
                     <li class="float-right"><a href="/service/about-us">About us</a></li>
                 </ul>
 
-                <form class="clear-both padding-md-top hidden-sm-down validate newsletter-form float-right" action="https://frameweb.us14.list-manage.com/subscribe/post?u=66992785a8c9a91a586594e05&amp;id=cd91c750f2" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="">
+                <form class="clear-both padding-md-top hidden-xs hidden-sm validate newsletter-form float-right" action="https://frameweb.us14.list-manage.com/subscribe/post?u=66992785a8c9a91a586594e05&amp;id=cd91c750f2" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="">
                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66992785a8c9a91a586594e05_cd91c750f2" tabindex="-1" value=""></div>
                     <input type="hidden" value="256" name="group[23][256]" id="mce-group[23]-23-0" checked="checked">
                     <div class="clear"><input type="submit" value="Subscribe to newsletter &nbsp;&nbsp;>" name="subscribe" class="padding-sm button button-pink"></div>
                 </form>
             </div>
 
-            <div class="col-12 hidden-md-up">
+            <div class="col-12 hidden-md hidden-lg hidden-xl">
                 <form class="validate newsletter-form float-right" action="https://frameweb.us14.list-manage.com/subscribe/post?u=66992785a8c9a91a586594e05&amp;id=cd91c750f2" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="">
                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66992785a8c9a91a586594e05_cd91c750f2" tabindex="-1" value=""></div>
                     <input type="hidden" value="256" name="group[23][256]" id="mce-group[23]-23-0" checked="checked">
@@ -448,7 +631,7 @@
 
             <div class="col-6">
                 <ul class="footer-small-text float-right padding-md-top">
-                    <li class="float-right"><a href="/terms-conditions">Terms<span class="hidden-sm-down"> &amp; Conditions</span></a></li>
+                    <li class="float-right"><a href="/terms-conditions">Terms<span class="hidden-xs hidden-sm"> &amp; Conditions</span></a></li>
                     <li class="float-right"><a href="/privacy-policy">Privacy Policy</a></li>
                     <li class="float-right"><a href="/cookie-policy">Cookie Policy</a></li>
                 </ul>
@@ -456,6 +639,7 @@
         </div>
     </div>
 </div>
+
 		<!-- ========= JavaScript tags ========================================================================== -->
 
 		<!-- Color thief -->
@@ -521,9 +705,9 @@
 		</script>
 
 		<!-- Initialize scripts -->
-		<script src="/js/main-2-1.5.js"></script>
+		<script src="/js/main-2-1.6.js"></script>
 
-    	<script>$(function() {
+    <script>$(function() {
     var date = new Date;
     date.setDate(date.getDate() + 14);
     if (navigator.cookieEnabled) {
