--- a/b/ba/ban/banquetrecords.com.html
+++ b/b/ba/ban/banquetrecords.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the banquetrecords.com privacy policy that was archived on 2018-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181213220923id_/https%3A//www.banquetrecords.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the banquetrecords.com privacy policy that was archived on 2019-04-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190417210817id_/https%3A//www.banquetrecords.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 
@@ -305,6 +305,7 @@ a.cc_btn:hover {
 <li><a href="new-in">New In</a></li>
 <li><a href="pre-orders">Pre-orders</a></li>
 <li><a href="record-store-day-2018">Record Store Day</a></li>
+<li><a href="record-store-day-2019">Record Store Day</a></li>
 <li><a href="soundtracks">Soundtracks</a></li>
 <li><a href="re-issues">Re-issues</a></li>
 <li><a href="pop">Pop</a></li>
