--- a/g/gu/guz/guzer.com.html
+++ b/g/gu/guz/guzer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the guzer.com privacy policy that was archived on 2018-08-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180826172342id_/http%3A//guzer.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the guzer.com privacy policy that was archived on 2019-04-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190418041820id_/http%3A//www.guzer.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head><title>Guzer Privacy Policy</title></head>
 <body>
