--- a/a/ar/are/areavibes.com.html
+++ b/a/ar/are/areavibes.com.html
@@ -1,17 +1,14 @@
-<!--The following is the downloaded HTML source of the areavibes.com privacy policy that was archived on 2018-10-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181012063330id_/https%3A//www.areavibes.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the areavibes.com privacy policy that was archived on 2019-04-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190418052353id_/https%3A//www.areavibes.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head data-placement="">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <script async="" src="//www.google-analytics.com/analytics.js"></script><script>
-    var googletag = googletag || {};
-    googletag.cmd = googletag.cmd || [];
-    var pbjs = pbjs || {};
-    pbjs.que = pbjs.que || [];
-  </script>
-  <script async="async" src="/assets/header.js?v=2018052323"></script>
-  <script async="async" src="//www.googletagservices.com/tag/js/gpt.js"></script>
+  <script async="" src="//www.google-analytics.com/analytics.js"></script><script async="async" src="//www.googletagservices.com/tag/js/gpt.js"></script>
+  <script async="async" src="/assets/prebid.js"></script>
+  <script async="async" src="/assets/header.js?v=2019011616"></script>
+  <!--
   <script async="async" src="https://ap.lijit.com/www/sovrn_beacon_standalone/sovrn_standalone_beacon.js?iid=13387859&amp;uid=areavibes" id="sBeacon"></script>
+  -->
 
   <meta charset="utf-8">
   <title>Privacy Policy - AreaVibes</title>
@@ -29,7 +26,9 @@
   <!--[if IE]><link rel="shortcut icon" href="/images/favicon.ico"><![endif]-->
   <link rel="icon" href="/images/favicon.png">
 
-  </head>
+  
+  <!-- Hotjar Tracking Code for www.areavibes.com --> <script>     (function(h,o,t,j,a,r){         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};         h._hjSettings={hjid:1150550,hjsv:6};         a=o.getElementsByTagName('head')[0];         r=o.createElement('script');r.async=1;         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;         a.appendChild(r);     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv='); </script><script async="" src="https://static.hotjar.com/c/hotjar-1150550.js?sv=6"></script>
+</head>
 <body class="corp privacy" data-user="guest">
 <!--[if lt IE 9]>
     <p class="bad-browser-msg">You are using an <strong>outdated</strong> browser; parts of the site may not function properly. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -39,7 +38,7 @@
   <div class="container">
     <div class="row">
       <div class="twelve columns">
-      	<a href="/" class="av-logo"><img alt="AreaVibes - The Best Places To Live" src="/images/av-logo.png"></a>
+      	<a href="/" class="av-logo"><img alt="AreaVibes - The Best Places To Live" src="/images/av-logo.svg"></a>
 
         <div class="hamburger">
           <input type="checkbox" id="ham-trigger">
@@ -48,7 +47,7 @@
             <div class="nav-group">
               <a href="/real-estate/">Find Homes</a>
               <a href="/write-a-review/">Review Your City</a>
-              <a href="/best-places/america/">Best Places 2018</a>
+              <a href="/best-places/america/">Best Places 2019</a>
               <a href="/library/best-places-to-live/">Top 10 Cities</a>
               <a href="/library/">Blog</a>
             </div>
@@ -200,11 +199,83 @@
   </div>
 </div>
 
-<div class="social-btns-container">
-  <div id="sb-tw"></div>
-  <div id="sb-fb"></div>
-  <div id="sb-pi"></div>
-  <div id="sb-gp"></div>
+
+
+<div class="generic-modal closed" id="find-agent-wiz">
+  <div class="generic-modal-shell">
+    <div class="generic-modal-x"></div>
+
+    <div class="generic-modal-contents">
+
+      <form data-page="0" data-verb="">
+        <fieldset data-page="0">
+          <div class="grp">
+            <strong>Are you looking to buy or sell?</strong>
+            <div class="rad-grp">
+              <label><input type="radio" name="type" value="b"><i class="rad spr-buy"></i></label>
+              <label><input type="radio" name="type" value="s"><i class="rad spr-sel"></i></label>
+            </div>
+          </div>
+          <button type="button">Next</button>
+        </fieldset>
+        <fieldset data-page="1">
+          <div class="grp">
+            <strong data-verb-b="buying?" data-verb-s="selling?">What style of home are you </strong>
+            <div class="rad-grp">
+              <label><input type="radio" name="style" value="hou"><i class="rad spr-hou"></i></label>
+              <label><input type="radio" name="style" value="con"><i class="rad spr-con"></i></label>
+              <label><input type="radio" name="style" value="twn"><i class="rad spr-twn"></i></label>
+              <label><input type="radio" name="style" value="oth"><i class="rad spr-oth"></i></label>
+            </div>
+          </div>
+          <button type="button">Next</button>
+        </fieldset>
+        <fieldset data-page="2">
+          <div class="grp">
+            <strong data-verb-b="budget?" data-verb-s="home worth?">What is your </strong>
+            <div class="sld-grp">
+              <input class="dflt" type="range" name="price" value="0" min="0" max="4">
+              <div class="ticks"><i>$100K</i><i>$250K</i><i>$500K</i><i>$750K</i><i>$1M+</i></div>
+            </div>
+          </div>
+          <button type="button">Next</button>
+        </fieldset>
+        <fieldset data-page="3">
+          <div class="grp">
+            <strong data-verb-b="buy?" data-verb-s="sell?">When are you looking to </strong>
+            <div class="sld-grp">
+              <input class="dflt" type="range" name="start" value="0" min="0" max="4">
+              <div class="ticks"><i>ASAP</i><i>1-3 mos.</i><i>3-6 mos.</i><i>6-9 mos.</i><i>1 yr+</i></div>
+            </div>
+          </div>
+          <button type="button">Next</button>
+        </fieldset>
+        <fieldset data-page="4">
+          <div class="grp">
+            <strong>Connect with top real estate agents</strong>
+            <input type="text" name="named" placeholder="Full name" required="">
+            <input type="text" name="email" placeholder="Email address" required="">
+            <input type="text" name="phone" placeholder="Phone number" required="">
+          </div>
+          <button type="submit">Submit</button>
+          <small>By submitting this form, you consent to receive text messages, emails, and/or calls (may be recorded; and may be direct, autodialed or use pre-recorded/artificial voices even if on the Do Not Call list) from AreaVibes or our partner real estate professionals and their network of service providers, about your inquiry or the home purchase/rental process.  Messaging and/or data rates may apply.  Consent is not a requirement or condition to receive real estate services. You hereby further confirm that checking this box creates an electronic signature with the same effect as a handwritten signature.</small>
+        </fieldset>
+
+        <input type="hidden" name="myhp" value="">
+        <input type="hidden" name="mytk" value="3988ff921ca10cc5d58eda15a8be745aebcf8bde70dc2f6d994849a5df8a9a3e">
+
+        <ul class="noselect">
+          <li data-page="0"></li>
+          <li data-page="1"></li>
+          <li data-page="2"></li>
+          <li data-page="3"></li>
+          <li data-page="4"></li>
+        </ul>
+      </form>
+
+    </div>
+
+  </div>
 </div>
 
 <div class="section footer">
@@ -241,7 +312,7 @@
       	</div>
 
       	<div class="footer-copyright">
-      		© AreaVibes Inc. 2010-2018      	</div>
+      		© AreaVibes Inc. 2010-2019      	</div>
       </div>
     </div>
   </div>
@@ -249,11 +320,13 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-<!-- <script src="//maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAcBy3KN0m4_7z9ZdtEdHIzobBciAAYqWc&v=3.31"></script> -->
+<!--
+	<script src="//maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAcBy3KN0m4_7z9ZdtEdHIzobBciAAYqWc&v=3.31"></script>
+-->
 <script src="//maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyAcBy3KN0m4_7z9ZdtEdHIzobBciAAYqWc"></script>
 
 <script src="/assets/jquery.ui.touch-punch.min.js"></script>
-<script src="/assets/global.js?v=2018082921"></script>
+<script src="/assets/global.js?v=2019012217"></script>
 <script src="/assets/corp.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
